--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "polished": "^4.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
     "styled-components": "^6.1.13"
